# hcs-client

./: Cargo.toml  Config.toml
_program_data_dir/changes/: 12.tmp  13.tmp
_storage_dir/: .New Folder.sc  .Text File.txt.sc
_symlink_dir/: Text File.txt
src/: args.rs  config.rs  errors.rs  extra_data.rs  lib.rs  main.rs  sync_client_to_server.rs  sync_server_to_client.rs
src/sync_client_to_server/: file_create.rs  file_modify.rs
src/sync_server_to_client/: directory_create.rs  directory_delete.rs  directory_move.rs  file_create.rs  file_delete.rs  file_modify.rs  file_move.rs
