[package]
name = "hcs_client"
version = "0.1.0"
edition = "2021"
authors = ["Sean McConnachie <seanjulian.mcc@gmail.com>"]

[dependencies]
hcs_lib = { path = "../hcs-lib", version = "0.1.0", features = [
    "client_suite",
] }

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
async-trait = "0.1.68"
symlink = "0.1.0"
